pkl-core/src/test/files/LanguageSnippetTests/input/errors/mappingTypeCheckError3.pkl
// ConstantEntriesLiteralNode
res: Mapping<String, String> = new {
  [1] = "foo"
}
